Showcases part 3: place holders for Windows install and Rising Wave (#47)
* More details in the Windows file

* Warning on Proton and eventual consistency

* Rename folder

* Initial notes on use of Rising Wave for attendance rate calculation

* Update streaming showcase links